feat: Switched to a parent pom for dependencies management